--- a/.github/workflows/maven-release.yml
+++ b/.github/workflows/maven-release.yml
@@ -49,6 +49,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: target/environment-*.jar
+          asset_path: target/environment-*_*.jar
           asset_name: environment-${{ github.ref_name }}.jar
           asset_content_type: application/java-archive
