--- a/.github/workflows/maven-release.yml
+++ b/.github/workflows/maven-release.yml
@@ -35,15 +35,24 @@ jobs:
       - name: Find generated JAR file
         id: find_jar
         run: |
-          JAR_FILE=$(ls target/environment-*.jar | head -n 1)
+          if [ -z "$(ls target/${{ GITHUB_REPOSITORY }}-*.jar 2>/dev/null)" ]; then
+            echo "Error: No JAR file found in target directory."
+            exit 1
+          fi
+          JAR_FILE=$(ls target/${{ GITHUB_REPOSITORY }}-*.jar | head -n 1)
           echo "JAR_FILE=$JAR_FILE" >> $GITHUB_ENV
 
       # 新增步骤：动态生成发布说明
       - name: Generate Release Notes
         id: generate_release_notes
         run: |
-          # 提取当前 tag 的提交记录
-          RELEASE_NOTES=$(git log $(git describe --tags --abbrev=0 @^)..@ --pretty=format:'- %s')
+          # 检查是否为首次创建 tag
+          PREVIOUS_TAG=$(git describe --tags --abbrev=0 @^ || echo "")
+          if [ -z "$PREVIOUS_TAG" ]; then
+            RELEASE_NOTES=$(git log --pretty=format:'- %s')
+          else
+            RELEASE_NOTES=$(git log $PREVIOUS_TAG..@ --pretty=format:'- %s')
+          fi
           
           # 如果没有提交记录，则提供默认说明
           if [ -z "$RELEASE_NOTES" ]; then
@@ -51,8 +60,10 @@ jobs:
           fi
           
           # 优化措辞并保存到环境变量
-          RELEASE_BODY="### 版本 ${{ github.ref_name }} 发布说明\n\n本次版本更新包含以下改进和修复：\n${RELEASE_NOTES}"
-          echo "RELEASE_BODY=${RELEASE_BODY}" >> $GITHUB_ENV
+          RELEASE_BODY="### 版本 ${{ github.ref_name }} 发布说明 \
+          本次版本更新包含以下改进和修复：\
+          ${RELEASE_NOTES}"
+          echo "RELEASE_BODY=\"$RELEASE_BODY\"" >> $GITHUB_ENV
 
       # 步骤 6：创建 Release
       - name: Create Release
@@ -63,7 +74,8 @@ jobs:
         with:
           tag_name: ${{ github.ref_name }}
           release_name: Release ${{ github.ref_name }}
-          body: ${{ env.RELEASE_BODY }}
+          body: |
+            ${{ env.RELEASE_BODY }}
           draft: false
           prerelease: false
 
@@ -76,5 +88,6 @@ jobs:
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: ${{ env.JAR_FILE }}
-          asset_name: environment-${{ github.ref_name }}.jar
+          asset_name: ${{ GITHUB_REPOSITORY }}-${{ github.ref_name }}.jar
           asset_content_type: application/java-archive
+
