--- a/.github/workflows/maven-release.yml
+++ b/.github/workflows/maven-release.yml
@@ -35,11 +35,11 @@ jobs:
       - name: Find generated JAR file
         id: find_jar
         run: |
-          if [ -z "$(ls target/${{ github.repository }}-*.jar 2>/dev/null)" ]; then
+          if [ -z "$(ls target/environment-*.jar 2>/dev/null)" ]; then
             echo "Error: No JAR file found in target directory."
             exit 1
           fi
-          JAR_FILE=$(ls target/${{ github.repository }}-*.jar | head -n 1)
+          JAR_FILE=$(ls target/environment-*.jar | head -n 1)
           echo "JAR_FILE=$JAR_FILE" >> $GITHUB_ENV
 
       # 新增步骤：动态生成发布说明
@@ -88,6 +88,6 @@ jobs:
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: ${{ env.JAR_FILE }}
-          asset_name: ${{ github.repository }}-${{ github.ref_name }}.jar
+          asset_name: environment-${{ github.ref_name }}.jar
           asset_content_type: application/java-archive
 
